log-schemas/27.5/opcua_binary_create_session.rst
``opcua_binary_create_session`` field reference
-----------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``opcua_link_id`` (string)
     - The opcua_link_id information.

   * - ``application_uri`` (string)
     - The application_uri information.

   * - ``product_uri`` (string)
     - The product_uri information.

   * - ``encoding_mask`` (integer - count)
     - The encoding_mask information.

   * - ``locale`` (string)
     - The locale information.

   * - ``text`` (string)
     - The text information.

   * - ``application_type`` (integer - count)
     - The application_type information.

   * - ``gateway_server_uri`` (string)
     - The gateway_server_uri information.

   * - ``discovery_profile_uri`` (string)
     - The discovery_profile_uri information.

   * - ``discovery_profile_link_id`` (string)
     - The discovery_profile_link_id information.

   * - ``server_uri`` (string)
     - The server_uri information.

   * - ``endpoint_url`` (string)
     - The endpoint_url information.

   * - ``session_name`` (string)
     - The session_name information.

   * - ``client_nonce`` (string)
     - The client_nonce information.

   * - ``client_cert_size`` (integer - count)
     - The client_cert_size information.

   * - ``client_cert`` (string)
     - The client_cert information.

   * - ``req_session_timeout`` (integer - count)
     - The req_session_timeout information.

   * - ``max_res_msg_size`` (integer - count)
     - The max_res_msg_size information.

   * - ``session_id_encoding_mask`` (string)
     - The session_id_encoding_mask information.

   * - ``session_id_namespace_idx`` (integer - count)
     - The session_id_namespace_idx information.

   * - ``session_id_numeric`` (integer - count)
     - The session_id_numeric information.

   * - ``session_id_string`` (string)
     - The session_id_string information.

   * - ``session_id_guid`` (string)
     - The session_id_guid information.

   * - ``session_id_opaque`` (string)
     - The session_id_opaque information.

   * - ``auth_token_encoding_mask`` (string)
     - The auth_token_encoding_mask information.

   * - ``auth_token_namespace_idx`` (integer - count)
     - The auth_token_namespace_idx information.

   * - ``auth_token_numeric`` (integer - count)
     - The auth_token_numeric information.

   * - ``auth_token_string`` (string)
     - The auth_token_string information.

   * - ``auth_token_guid`` (string)
     - The auth_token_guid information.

   * - ``auth_token_opaque`` (string)
     - The auth_token_opaque information.

   * - ``revised_session_timeout`` (integer - count)
     - The revised_session_timeout information.

   * - ``server_nonce`` (string)
     - The server_nonce information.

   * - ``server_cert_size`` (integer - count)
     - The server_cert_size information.

   * - ``server_cert`` (string)
     - The server_cert information.

   * - ``endpoint_link_id`` (string)
     - The endpoint_link_id information.

   * - ``algorithm`` (string)
     - The algorithm information.

   * - ``signature`` (string)
     - The signature information.

   * - ``max_req_msg_size`` (integer - count)
     - The max_req_msg_size information.
